--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,12 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+.tournament-form {
+  position: absolute;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+}
 .app {
   display: flex;
   flex-direction: column;
