--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,7 +46,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #2D3250;
+    background: #424769;
 }
 
 /* Handle */
@@ -58,5 +58,5 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #7077A1;
 }
